test/sema/lambdas/argument_coerce_capture.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn foo(f: (number) -> unit) {
  f(123);
}

fn main() {
  let n = 0;

  // CHECK: [[# @LINE + 1 ]]:7: error: capturing lambda '(lambda@<source>:10:7)' cannot be coerced into function type '(number) -> unit'
  foo(->(x){
    println(n);
  });
}
